--- a/CampusJournal/Views/StudentsViewModels/Create.cshtml
+++ b/CampusJournal/Views/StudentsViewModels/Create.cshtml
@@ -38,9 +38,9 @@
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DateOfBirth" class="control-label"></label>
-                <select asp-for="DateOfBirth" class="form-control"></select>
-                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                <label asp-for="ReleaseDate" class="control-label"></label>
+                <select asp-for="ReleaseDate" class="form-control"></select>
+                <span asp-validation-for="ReleaseDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
